# openapi.yaml
@@ -12,14 +12,69 @@ paths:
       security:
         - oauth2: []
       responses:
-        '200':
+        200:
           description: Success
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
-        '403':
-          description: Unauthorized
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /resources/{resourceId}:
+    get:
+      description: "return resources"
+      security:
+        - oauth2: []
+      parameters:
+        - in: path
+          name: resourceId
+          required: true
+          schema:
+            type: integer
+          description: "resource id"
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Resource'
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /resources:
+    post:
+      description: "Add a new resource type"
+      security:
+        - oauth2: [ ]
+      requestBody:
+          description: "Resource to add"
+          required: true
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Resource'
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Resource'
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
 components:
   securitySchemes:
     oauth2:
@@ -29,6 +84,17 @@ components:
           authorizationUrl: "https://oauth2.googleapis.com/tokeninfo"
           tokenUrl: "https://https://oauth2.googleapis.com/token"
   schemas:
+    Error:
+      required:
+        - code
+        - message
+      properties:
+        code:
+          type: integer
+          format: int32
+        message:
+          type: string
+      type: object
     User:
       required:
         - name
@@ -36,6 +102,35 @@ components:
         name:
           type: string
           example: bob
+      type: object
+    Resource:
+      required:
+        - name
+        - resourceInputs
+      properties:
+        name:
+          type: string
+          example: gcs-bucket
+        resourceInputs:
+          type: array
+          items:
+            $ref: '#/components/schemas/Input'
+      type: object
+    Input:
+      required:
+        - name
+        - description
+        - default
+        - type
+      properties:
+        name:
+          type: string
+        description:
+          type: string
+        type:
+          type: string
+        value:
+          type: string
       type: object
 
   
